// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Select ui with value: Component: Select => ui => with value 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Label
    for="subject"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Subject
  </Label>
  <Input
    className=""
    id="subject"
    invalid={true}
    onBlur={[MockFunction]}
    onChange={[Function]}
    placeholder="Please enter your subject"
    type="select"
    valid={false}
    value={0}
  >
    <option>
      Please enter your subject
    </option>
    <option
      disabled={false}
      key="42"
      value={0}
    >
      admin@42.nl
    </option>
    <option
      disabled={false}
      key="777"
      value={1}
    >
      coordinator@42.nl
    </option>
    <option
      disabled={false}
      key="1337"
      value={2}
    >
      user@42.nl
    </option>
  </Input>
  Some error
</FormGroup>
`;

exports[`Component: Select ui without label: Component: Select => ui => without label 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Input
    className=""
    id="1"
    invalid={true}
    onBlur={[MockFunction]}
    onChange={[Function]}
    placeholder="Please enter your subject"
    type="select"
    valid={false}
    value={0}
  >
    <option>
      Please enter your subject
    </option>
    <option
      disabled={false}
      key="42"
      value={0}
    >
      admin@42.nl
    </option>
    <option
      disabled={false}
      key="777"
      value={1}
    >
      coordinator@42.nl
    </option>
    <option
      disabled={false}
      key="1337"
      value={2}
    >
      user@42.nl
    </option>
  </Input>
  Some error
</FormGroup>
`;

exports[`Component: Select ui without placeholder: Component: Select => ui => without placeholder 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Label
    for="subject"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Subject
  </Label>
  <Input
    className=""
    id="subject"
    invalid={true}
    onBlur={[MockFunction]}
    onChange={[Function]}
    type="select"
    valid={false}
    value={0}
  >
    <option />
    <option
      disabled={false}
      key="42"
      value={0}
    >
      admin@42.nl
    </option>
    <option
      disabled={false}
      key="777"
      value={1}
    >
      coordinator@42.nl
    </option>
    <option
      disabled={false}
      key="1337"
      value={2}
    >
      user@42.nl
    </option>
  </Input>
  Some error
</FormGroup>
`;
